Bookmarks bar, unnecessary tooltip is seen for folders with small name.

BUG=635836

Review-Url: https://codereview.chromium.org/2504753003
Cr-Commit-Position: refs/heads/master@{#433563}

Former-commit-id: efa1d76a70dfec345ff89d2ca978a46029c51e7e